changed positioning back to abosolute and fixed spacing around dropdown items

--- a/src/styles/FilmSubmission/OptionSelectCard.module.scss
+++ b/src/styles/FilmSubmission/OptionSelectCard.module.scss
@@ -5,6 +5,7 @@
   //border-radius: 32px;
   display: inline-block;
   margin: 1rem;
+  position: flex;
 }
 
 .title {
@@ -19,7 +20,7 @@
 .inputContainer {
   padding-left: 1rem;
   display: inline-block;
-  position: flex;
+  position: absolute;
 
   &:hover {
     //background-color: #f5f5f5;
@@ -74,7 +75,7 @@
 
   .dropdown {
     position: relative;
-    top: -2rem;
+    top: -1rem;
     display: none;
     outline: 1px solid rgb(216, 216, 216);
     width: 20rem;
@@ -95,7 +96,7 @@
       z-index: 1;
       border-radius: 5px;
       padding: 5px;
-      margin-top: 5px;
+      margin-top: 1rem;
     }
 
     &:focus {
@@ -111,6 +112,8 @@
     .item {
       display: block;
       border-bottom: rgba(0, 0, 0, 0.2) solid 1px;
+      font-size: 1.1rem;
+      padding: 0.2rem;
 
       &:hover {
         cursor: pointer;
